docs/7.57/md/abenabap_examples.md
---
title: "ABAP Examples"
description: |
  A(#A) B(#B) C(#C) D(#D) E(#E) F(#F) G(#G) H(#H) I(#I) J(#J) L(#L) M(#M) N(#N) O(#O) P(#P) R(#R) S(#S) T(#T) U(#U) V(#V) W(#W) X(#X) A  ABAP CDS - Consuming Business Services with Demo Class(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenc
version: "7.57"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_examples.htm"
abapFile: "abenabap_examples.htm"
keywords: ["select", "insert", "update", "delete", "loop", "do", "if", "case", "try", "catch", "method", "class", "data", "types", "internal-table", "field-symbol", "exception-handling", "abenabap", "examples"]
---

* * *

AS ABAP Release 757, ©Copyright 2023 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap.htm) → 

 [![](Mail.gif?object=Mail.gif&sap-language=EN "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback on ABAP Documentation&body=Document: ABAP Examples, ABENABAP_EXAMPLES, 757%0D%0A%0D%0AError:%0D%0A%0D%0A%0D%0A%0D%0ASugges
tion for improvement:)

ABAP Examples

[A](#A) [B](#B) [C](#C) [D](#D) [E](#E) [F](#F) [G](#G) [H](#H) [I](#I) [J](#J) [L](#L) [M](#M) [N](#N) [O](#O) [P](#P) [R](#R) [S](#S) [T](#T) [U](#U) [V](#V) [W](#W) [X](#X)
A
[
ABAP CDS - Consuming Business Services with Demo Class](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenconsume_bs_abexa.htm)[
ABAP CDS - Consuming Business Services with OData Client Proxy](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenconsume_bs_client_proxy_abexa.htm)[
ABAP CDS, Annotation Array](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencds_annotation_array_abexa.htm)[
ABAP CDS, Evaluation of Annotations](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencds_semantics_annotation_abexa.htm)[
ABAP EML - AUTHORITY-CHECK DISABLE](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abeneml_auth_check_disable_abexa.htm)[
ABAP EML - COMMIT ENTITIES BEGIN, END with CONVERT KEY OF](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencommit_entities_beginend_abexa.htm)[
ABAP EML - COMMIT ENTITIES IN SIMULATION MODE](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencommit_entities_sim_mod_abexa.htm)[
ABAP EML - COMMIT ENTITIES, Dynamic Form](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abeneml_commit_dyn_abexa.htm)[
ABAP EML - COMMIT ENTITIES, Short and Long Form](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencommit_entities_sh_lo_abexa.htm)[
ABAP EML - CORRESPONDING, Type Mapping](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abeneml_type_mapping_abexa.htm)[
ABAP EML - GET PERMISSIONS, only\_clause](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenget_perm_only_abexa.htm)[
ABAP EML - GET PERMISSIONS, Variants](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenget_perm_forms_abexa.htm)[
ABAP EML - MODIFY AUGMENTING ENTITY](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abeneml_modify_augmenting_abexa.htm)[
ABAP EML - MODIFY, Field Specification Expressions](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abeneml_modify_op_fields_abexa.htm)[
ABAP EML - MODIFY, Nonstandard Operations](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abeneml_modify_custom_op_abexa.htm)[
ABAP EML - MODIFY, Standard Operations (Managed)](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abeneml_modify_op_abexa.htm)[
ABAP EML - MODIFY, Standard Operations (Unmanaged)](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abeneml_modify_op_u_abexa.htm)[
ABAP EML - MODIFY, Variants](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abeneml_modify_alternatives_abexa.htm)[
ABAP EML - READ, Field Specification Expressions](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abeneml_read_op_fields_abexa.htm)[
ABAP EML - READ, Operation Executing Functions](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abeneml_read_op_func_abexa.htm)[
ABAP EML - READ, Variants](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abeneml_read_alternatives_abexa.htm)[
ABAP EML - Responses](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abeneml_responses_abexa.htm)[
ABAP EML - Responses (Dynamic Forms of ABAP EML Statements)](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abeneml_responses_dyn_abexa.htm)[
ABAP EML - TYPE REQUEST FOR in a Managed RAP BO with Additional Save](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenrap_additional_save_abexa.htm)[
ABAP EML - TYPE REQUEST FOR in a Managed RAP BO with Unmanaged Save](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenrap_managed_unm_save_abexa.htm)[
ABAP EML - TYPE RESPONSE FOR](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abeneml_responses_2_abexa.htm)[
ABAP EML - Variants of SET FLAGS](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abeneml_set_flags_abexa.htm)[
ABAP EML - Variants of SET NAMES](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abeneml_set_names_abexa.htm)[
ABAP Objects - Classes](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenclass_abexa.htm)[
ABAP Objects - Events](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenevents_abexa.htm)[
ABAP Objects - Events in Inheritance](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenevent_inheritance_abexa.htm)[
ABAP Objects - Friendship](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenfriends_abexa.htm)[
ABAP Objects - Inheritance](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abeninheritance_abexa.htm)[
ABAP Objects - Interfaces](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abeninterface_abexa.htm)[
ABAP Objects - Object Transaction](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenoo_transaction_abexa.htm)[
ABAP Objects - Overview](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_objects_abexa.htm)[
ABAP SQL - Locator, Access to Column Content](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendb_locator_abexa.htm)[
ABAP SQL - Locator, Copy Column](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendb_copy_abexa.htm)[
ABAP SQL - Reader Stream, Read Database Table](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendb_reader_abexa.htm)[
ABAP SQL - Working with Hierarchies](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensheet_abap_sql_hiera_abexa.htm)[
ABAP SQL - Writer Stream, Fill Database Table](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendb_writer_abexa.htm)[
ABAP SQL Statements with the Addition MAPPING FROM ENTITY](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensql_mapping_from_entity_abexa.htm)[
ABAP SQL, Parameter Passing to a CDS View Entity](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenselect_cds_para_abexa.htm)[
Access to XML Using Class Libraries](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenxml_access_abexa.htm)[
ADBC - Bulk Access](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenadbc_dml_ddl_bulk_abexa.htm)[
ADBC - DDL and DML](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenadbc_dml_ddl_abexa.htm)[
ADBC - Parameter Binding](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenadbc_dml_ddl_binding_abexa.htm)[
ADBC - Prepared Statement](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenadbc_sql_prepared_abexa.htm)[
ADBC - Query](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenadbc_query_abexa.htm)[
ADBC - Stored Procedure](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenadbc_procedure_abexa.htm)[
ADF - Creating and Using an ABAP Daemon](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_daemon_abexa.htm)[
ADF - Mini ABAP Daemon](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_mini_daemon_abexa.htm)[
Adjusted Serialization and Deserialization](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenserializable_object_abexa.htm)[
AMC - Receiving Messages](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenamc_receive_abexa.htm)[
AMC - Sending Messages](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenamc_send_abexa.htm)[
AMC - Suppressing Standalone Messages](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenamc_suppress_echo_abexa.htm)[
AMDP - Access to ABAP Types](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenamdp_abap_types_abexa.htm)[
AMDP - Access to Database Schemas](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenamdp_db_schema_abexa.htm)[
AMDP - AMDP Functions](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenamdp_functions_abexa.htm)[
AMDP - AMDP Methods in Interfaces and Superclasses](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenamdp_polymorphism_abexa.htm)[
AMDP - Calling an AMDP Procedure from SQLScript](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenamdp_call_amdp_abexa.htm)[
AMDP - Calling an SQLScript Procedure from AMDP](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenamdp_call_abexa.htm)[
AMDP - Comparison of SQLScript with ABAP SQL](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenamdp_vs_abap_sql_abexa.htm)[
AMDP - Filling a Mesh with SQLScript](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenmesh_amdp_abexa.htm)[
AMDP - Graph Processing](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenamdp_graph_abexa.htm)[
AMDP - Implementation of an L Procedure](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenamdp_l_abexa.htm)[
AMDP - Implementation of an SQLScript Procedure](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenamdp_abexa.htm)[
AMDP - Method with Specified Service Connection](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenamdp_connection_abexa.htm)[
AMDP - SQLScript with Tabular CHANGING Parameter](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenamdp_changing_abexa.htm)[
APC - AS ABAP as Attached Client](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenapc_attached_client_abexa.htm)[
APC - AS ABAP as TCP Socket Client](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenapc_tcp_client_abexa.htm)[
APC - AS ABAP as WebSocket Client](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenapc_ws_client_abexa.htm)[
APC - AS ABAP as WebSocket Server](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenapc_abexa.htm)[
APC - Creating a Detached Client](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenapc_detached_client_abexa.htm)[
APC - System-Wide Access](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenapc_connect_via_handle_abexa.htm)[
arith\_exp - Calculations](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendivisions_abexa.htm)[
arith\_exp - Floating Point Numbers](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenfloating_point_numbers_abexa.htm)[
arith\_exp - Lossless Calculations](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencompute_exact_abexa.htm)[
asXML - Deserializing Structure Components](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_asxml_asjson_empty_abexa.htm)[
asXML - Mapping of Anonymous Data Objects](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenasxml_data_object_abexa.htm)[
asXML - Mapping of Elementary Data Types](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenasxml_elementary_abexa.htm)[
asXML - Mapping of Objects](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenasxml_object_abexa.htm)[
asXML - Mapping of Qualified Names](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenasxml_qnames_abexa.htm)[
asXML - Mapping of Structures](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenasxml_structure_abexa.htm)[
asXML - Mapping of Tables](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenasxml_table_abexa.htm)[
asXML - Mapping of UUIDs](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_xslt_mapping_abexa.htm)[
asXML - Mapping of XML Fragments](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenasxml_fragments_abexa.htm)[
asXML - Transformation ID vs. Simple Transformation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenasxml_id_vs_st_abexa.htm)
B
[
BDEF Derived Type Components in the Context of Requesting Permissions](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenderived_types_misc_abexa.htm)[
bit\_exp - Bit Operations](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendata_bit_abexa.htm)[
bit\_func - Setting Bits](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenbit_func_abexa.htm)
C
[
Calling a Dialog Module](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencall_dialog_abexa.htm)[
Calling Function Modules](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencall_function_abexa.htm)[
Case Distinction CASE TYPE OF for Exceptions](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencase_type_of_exception_abexa.htm)[
Case Distinction CASE TYPE OF for RTTI](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencase_type_of_rtti_abexa.htm)[
CDS BDL - Action](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenbdl_action1_abexa.htm)[
CDS BDL - Action with Input Parameter](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenbdl_action2_abexa.htm)[
CDS BDL - BDEF Projection Extension, Field Extension](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenbdl_entity_proj_ext_1_abexa.htm)[
CDS BDL - BDEF Projection Extension, Node Extension](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenbdl_entity_proj_ext_abexa.htm)[
CDS BDL - Behavior Extension](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenbdl__behavior_ext_abexa.htm)[
CDS BDL - Determination](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenbdl_determination_abexa.htm)[
CDS BDL - Draft Action Activate](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenbdl_draft_action1_abexa.htm)[
CDS BDL - Draft Actions Edit, Discard, Prepare](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenbdl_draft_action2_abexa.htm)[
CDS BDL - Extend Determine Action](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenbdl_det_action_ext_abexa.htm)[
CDS BDL - Factory Action](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenbdl_action3_abexa.htm)[
CDS BDL - Field Extension](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenbdl_field_ext_abexa.htm)[
CDS BDL - function](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenbdl_function_abexa.htm)[
CDS BDL - Global Authorization](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenbdl_authorization_abexa.htm)[
CDS BDL - Node Extension](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenbdl_assoc_ext_abexa.htm)[
CDS BDL - Operation Augmentation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenbdl_augment_abexa.htm)[
CDS BDL - RAP BO Extension Using Interface](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenbdl_using_interface_abexa.htm)[
CDS BDL - Validation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenbdl_validation_abexa.htm)[
CDS DDIC-based views (obsolete), Client Handling](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencds_client_handl_v1_abexa.htm)[
CDS DDIC-based views (obsolete), Obsolete Client Handling](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencds_client_handling_obs_abexa.htm)[
CDS DDL - CDS Projection View, Calculating a Virtual Element](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencds_proj_view_virtel_abexa.htm)[
CDS DDL - CDS Projection View, Expose Associations](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencds_proj_view_assoc_abexa.htm)[
CDS DDL - CDS View Entity, Exposing CDS Associations](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencds_expose_assoc_v2_abexa.htm)[
CDS DDL - CDS View Entity, Joins of CDS Associations](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencds_assoc_join_v2_abexa.htm)[
CDS DDL - DDIC-Based View, Exposing CDS Associations](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencds_expose_assoc_v1_abexa.htm)[
CDS DDL - DDIC-Based View, Joins of Associations](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencds_assoc_join_v1_abexa.htm)[
CDS DDL - DEFINE CUSTOM ENTITY, Implementing a Custom Query](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencds_custom_query_abexa.htm)[
CDS Metadata Extensions with CDS Variants](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencds_annotate_view_abexa.htm)[
Checkpoints and Checkpoint Groups](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencheckpoint_abexa.htm)[
CL\_ABAP\_CORRESPONDING for Internal Tables](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencl_abap_corr_itab_abexa.htm)[
CL\_ABAP\_CORRESPONDING for Nested Structures](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencl_abap_corr_struc_abexa.htm)[
CL\_ABAP\_CORRESPONDING for Simple Structures](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencl_abap_corr_dyn_abexa.htm)[
CL\_ABAP\_CORRESPONDING for Tabular Components](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencl_abap_corr_deep_abexa.htm)[
CL\_ABAP\_CORRESPONDING with Lookup Table](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencl_abap_corr_lookup_abexa.htm)[
Client-Dependent CDS Table Functions](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencds_func_client_dep_abexa.htm)[
Client-Independent CDS Table Functions](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencds_func_client_indep_abexa.htm)[
Comparing Internal Tables](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencompare_table_abexa.htm)[
Component Operator for Internal Tables](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencorresponding_itab_abexa.htm)[
Component Operator for Structures](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencorresponding_struct_abexa.htm)[
Component Operator for Table Expression](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencorresponding_table_exp_abexa.htm)[
Component Operator, Comparison with FOR Expression](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencorresponding_vs_for_abexa.htm)[
Component Operator, Handling Duplicates](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencorresponding_duplicates_abexa.htm)[
Component Operator, Lookup Table](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencorresponding_using_abexa.htm)[
Component Operator, Mapping Rule](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencorresponding_mapping_abexa.htm)[
Component Operator, Nested Mapping Rule](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencorresponding_deep_mapp_abexa.htm)[
Component Operator, Reflexive Assignment](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencorresponding_using_self_abexa.htm)[
Conditional Operator, Type Inference](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencond_type_inference_abexa.htm)[
Contexts - Message Handling](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencontext_message_abexa.htm)[
Conversion Costs](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenconversion_costs_abexa.htm)[
Conversion of Integer Numbers to Bytes](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenconversion_int_to_hex_abexa.htm)[
Conversion Operator, Enumerated Types](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenconv_enum_abexa.htm)[
Conversion Operator, Type Inference](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenconv_type_inference_abexa.htm)[
Conversion Rules for Structures](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendata_conv_str_abexa.htm)[
Convert Time Stamp in Time Stamp Field](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenconvert_utc_abexa.htm)[
Convert Time Stamps in Packed Numbers](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenconvert_time_stamp_abexa.htm)[
Converting a Classic Exception to a Class-Based Exception](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenraise_message_glbl_shrt_abexa.htm)[
Converting the Exception error\_message to a Class-Based Exception](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenraise_error_message_shrt_abexa.htm)[
Creating a Data Object as a Shared Object](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencreate_shared_data_objct_abexa.htm)[
Creating a Matrix Using FOR and VALUE](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencond_iteration_matrix_abexa.htm)[
Creating a Structure Using RTTC](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencreate_data_via_rttc_abexa.htm)[
Creating an Instance of a Class as a Shared Object](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencreate_shared_object_abexa.htm)[
Creating Data Objects with Implicit Type](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencreate_data_implicit_abexa.htm)[
Creating Elementary Data Objects](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencreate_simple_data_abexa.htm)[
Creating Reference Variables](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencreate_reference_abexa.htm)[
Creating Structured Data Objects](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencreate_structured_data_abexa.htm)[
Creating Tables Using FOR and VALUE](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencond_iteration_value_abexa.htm)[
Creating Tabular Data Objects](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencreate_tabular_data_abexa.htm)[
Creating Values with FOR and REDUCE](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencond_iteration_reduce_abexa.htm)
D
[
DDIC - Built-In Dictionary Types](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenddic_types_abexa.htm)[
DDIC - Flagging of Deprecated Data in Check Tables](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenddic_deprecation_abexa.htm)[
DDIC - Global Temporary Tables, Access](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenddic_gtt_abexa.htm)[
DDIC - Replacement Object for Database Table](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenddic_replacement_object_abexa.htm)[
DDIC - SQL Function UPPER](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensql_function_upper_abexa.htm)[
Decimal Floating Point Numbers, Formatting with STYLE](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenwrite_style_abexa.htm)[
Declaration of a Nested Structure](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennested_structure_abexa.htm)[
Declaration of a Simple Structure](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensimple_structure_abexa.htm)[
Deep Data Objects, Memory Consumption](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenmemory_usage_abexa.htm)[
Deriving LOB Handle Structures](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abentypes_lob_handle_abexa.htm)[
Deserializing Empty Elements](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_deserl_empt_elem_abexa.htm)[
Deserializing Missing Elements](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_deserl_no_elem_abexa.htm)[
Determining Data Object Distances](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendescribe_distance_abexa.htm)[
Determining Data Types](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenrtti_data_type_abexa.htm)[
Determining Elementary Data Types](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendescribe_field_abexa.htm)[
Determining Object Types](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenrtti_object_type_abexa.htm)[
Display BDEF Derived Type Components](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abeneml_display_derived_type_abexa.htm)[
dynpro - Automatic Input Checks](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendynpro_auto_check_abexa.htm)[
dynpro - CFW](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendynpro_cfw_abexa.htm)[
dynpro - CFW Events](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendynpro_custom_control_abexa.htm)[
dynpro - Checkboxes and Radio Buttons](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendynpro_radio_button_abexa.htm)[
dynpro - Conditional Module Call](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendynpro_on_cond_abexa.htm)[
dynpro - Context Menus](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendynpro_context_menu_abexa.htm)[
dynpro - Defining the Cursor Position](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendynpro_set_cursor_abexa.htm)[
dynpro - Determining the Cursor Position](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendynpro_get_cursor_abexa.htm)[
dynpro - Dynamic Screen Modification](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendynpro_mod_simple_abexa.htm)[
dynpro - Dynpro Sequences](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendynpro_flow_abexa.htm)[
dynpro - Field Help](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendynpro_f1_help_abexa.htm)[
dynpro - FIELD Statement](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendynpro_field_abexa.htm)[
dynpro - Fields with Dictionary Reference](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendynpro_dict_abexa.htm)[
dynpro - GUI Statuses and Function Codes](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendynpro_gui_status_abexa.htm)[
dynpro - Holding Data](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendynpro_hold_data_abexa.htm)[
dynpro - HTML Browser](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenhtml_browser_abexa.htm)[
dynpro - HTML from the MIME Repository](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenmime_html_abexa.htm)[
dynpro - Images in HTML](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenmime_pictures_abexa.htm)[
dynpro - Input Checks in Dialog Modules](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendynpro_field_chain_abexa.htm)[
dynpro - Input Help in Dialog Modules](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendynpro_f4_help_dial_abexa.htm)[
dynpro - Input Helps in the ABAP Dictionary](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendynpro_f4_help_dic_abexa.htm)[
dynpro - Input in HTML File](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenhtml_input_abexa.htm)[
dynpro - List Box with Value List from Input Help](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendynpro_drop1_abexa.htm)[
dynpro - List Box with Value List from PBO Module](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendynpro_drop2_abexa.htm)[
dynpro - Obsolete Input Check Using SELECT](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendynpro_check_flow_abexa.htm)[
dynpro - Obsolete Input Help Using SELECT](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendynpro_f4_help_dyn_abexa.htm)[
dynpro - Processing Input and Output Fields](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendynpro_in_out_field_abexa.htm)[
dynpro - Pushbuttons](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendynpro_push_button_abexa.htm)[
dynpro - Simple Module Call](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendynpro_simple_module_abexa.htm)[
dynpro - Splitter Control](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendynpro_splitter_control_abexa.htm)[
dynpro - Status Icons](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendynpro_status_icons_abexa.htm)[
dynpro - Step Loop](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensteploop_abexa.htm)[
dynpro - Strings](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendynpro_strings_abexa.htm)[
dynpro - Subscreens](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendynpro_subscreen_abexa.htm)[
dynpro - Table Control with Modifications](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abentable_control2_abexa.htm)[
dynpro - Table Control with Scrolling](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abentable_control1_abexa.htm)[
dynpro - Tabstrips with Scrolling in SAP GUI](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abentab_strip_control1_abexa.htm)[
dynpro - Tabstrips with Scrolling on the ABAP Server](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abentab_strip_control2_abexa.htm)[
dynpro - Text Output](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abentext_output_abexa.htm)[
dynpro - Unconditional Module Call](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendynpro_at_exit_comm_abexa.htm)
E
[
enum, Deserialization](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenenum_deserialization_abexa.htm)[
enum, Type Description](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenenum_description_abexa.htm)[
enum, Use](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenenum_usage_abexa.htm)[
Evaluating Date Fields and Time Fields](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendate_time_abexa.htm)[
Example for CL\_ABAP\_BEHAVIOR\_SAVER\_FAILED](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencl_abap_beh_saver_failed_abexa.htm)[
Example for Message-Related BDEF Derived Type Components](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenderived_types_reported_abexa.htm)[
Example for RAP Handler Methods](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenrap_handler_methods_abexa.htm)[
Example for RAP Saver Method map\_messages](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabp_map_messages_abexa.htm)[
Example for RAP Saver Methods](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabp_saver_class_abexa.htm)[
Example for RAP Saver Methods (Late Numbering Scenario)](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabp_saver_ln_abexa.htm)[
Example for save\_modified in a Managed RAP BO with Additional Save](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensave_modified_add_save_abexa.htm)[
Example for save\_modified in a Managed RAP BO with Unmanaged Save](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensave_modified_unm_save_abexa.htm)[
Exceptions, CATCH](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencatch_exception_abexa.htm)[
Exceptions, RAISE](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenraise_abexa.htm)[
Exceptions, TRY](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abentry_abexa.htm)[
EXEC SQL - Access to Database Functions](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenexec_sql_db_function_abexa.htm)[
EXEC SQL - Use](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennative_sql_abexa.htm)[
Expression-Orientation - 2048 Game](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abengame_2048_abexa.htm)[
Expression-Orientation - Jawbreaker Game](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenjaw_breaker_abexa.htm)[
Expression-Orientation - Minesweeper Game](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenmine_sweeper_abexa.htm)[
Extracts, Determining Numbers and Totals](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenextract_sum_abexa.htm)[
Extracts, Group Level Processing](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenextract_group_abexa.htm)[
Extracts, Processing](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenextract_at_abexa.htm)
F
[
Field Symbols, ASSIGN INCREMENT](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenassign_increment_abexa.htm)[
Field Symbols, Cast Structures](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenfield_symbols_struc_abexa.htm)[
Field Symbols, Casting](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencasting_imp_exp_abexa.htm)[
Field Symbols, Casting Built-In Data Types](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencasting_obsolete_type_abexa.htm)[
Field Symbols, Casting Decimal Places](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencasting_obsolete_dec_abexa.htm)[
Field Symbols, Dynamic Structure Components](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenassign_component_abexa.htm)[
Filling a Structure](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenstructure_filling_abexa.htm)[
FILTER, Filter Table](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenfilter_table_abexa.htm)[
FILTER, Filterings with Table Filter](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenfilter_table_condition_abexa.htm)[
FILTER, Single Values](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenfilter_value_condition_abexa.htm)[
Find a PCRE Regular Expression](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenpcre_abexa.htm)
G
[
Generic Typing and Complete Typing](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abentyping_abexa.htm)[
Getting RAP Context Information Using CL\_ABAP\_BEHV\_AUX](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenrap_cl_abap_behv_aux_abexa.htm)[
Group Level Processing](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenint_table_at_abexa.htm)[
Group Level Processing for Unsorted Tables](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenint_table_at_unsorted_abexa.htm)[
Group Level Processing with Nested Groups](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenint_table_sum_abexa.htm)
H
[
Host Expressions, Use in the WHERE Condition](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenhost_expr_in_where_cond_abexa.htm)
I
[
ICF - ABAP as HTTP Client](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenicf_client_abexa.htm)[
ICF - Accessing the MIME Repository from a HTTP Service](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenhttp_mime_pictures_abexa.htm)[
ICF - Accessing the MIME Repository Using ICF](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenicf_mime_pictures_abexa.htm)[
ICF - Calling an HTTP Service](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenicf_service_abexa.htm)[
ICF - Calling an HTTP Service Using the POST Method](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenicf_post_service_abexa.htm)[
INSERT, CLIENT](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abeninsert_client_abexa.htm)[
INSERT, FROM SELECT](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abeninsert_from_select_abexa.htm)[
Inverse Reads on Internal Table without STEP](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abeninverse_itab_for_abexa.htm)[
itab - Appending Lines](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenappend_lines_abexa.htm)[
itab - Deleting Duplicate Lines](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendelete_dup_lines_abexa.htm)[
itab - Deleting Lines Using the Index](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendelete_line_idx_abexa.htm)[
itab - Deleting Lines Using WHERE](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendelete_itab_using_key_abexa.htm)[
itab - Grouping Internal Tables, Step by Step](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenloop_group_by_abexa.htm)[
itab - Grouping with FOR for Aggregates](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenfor_group_by_aggregates_abexa.htm)[
itab - Grouping with FOR for Sorts](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenfor_group_by_sort_abexa.htm)[
itab - Grouping with FOR in Group Levels](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenfor_group_by_levels_abexa.htm)[
itab - Grouping with FOR in Overlaps](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenfor_group_by_overlap_abexa.htm)[
itab - Grouping with FOR in Packages](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenfor_group_by_packages_abexa.htm)[
itab - Grouping with FOR Using a Comparison](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenfor_group_by_comparison_abexa.htm)[
itab - Grouping with FOR Using a Function](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenfor_group_by_func_abexa.htm)[
itab - Grouping with FOR Using a Method](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenfor_group_by_method_abexa.htm)[
itab - Grouping with FOR Using Column Values](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenfor_group_by_values_abexa.htm)[
itab - Grouping with FOR, Nesting](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenfor_group_by_lvls_nst_abexa.htm)[
itab - Grouping with LOOP and FOR](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenloop_group_by_for_abexa.htm)[
itab - Grouping with LOOP and Sort](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenloop_group_by_sort_abexa.htm)[
itab - Grouping with LOOP for Aggregates](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenloop_group_by_aggregates_abexa.htm)[
itab - Grouping with LOOP in Group Levels](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenloop_group_by_levels_abexa.htm)[
itab - Grouping with LOOP in Overlaps](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenloop_group_by_overlap_abexa.htm)[
itab - Grouping with LOOP in Packages](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenloop_group_by_packages_abexa.htm)[
itab - Grouping with LOOP Using a Comparison](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenloop_group_by_comparison_abexa.htm)[
itab - Grouping with LOOP Using a Function](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenloop_group_by_func_abexa.htm)[
itab - Grouping with LOOP Using a Method](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenloop_group_by_method_abexa.htm)[
itab - Grouping with LOOP Using Column Values](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenloop_group_by_values_abexa.htm)[
itab - Grouping with LOOP, Explicit and Implicit](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenloop_group_by_explicit_abexa.htm)[
itab - Grouping with LOOP, Nesting](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenloop_group_by_lvls_nst_abexa.htm)[
itab - Grouping with LOOP, Output Behavior](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenloop_at_group_abexa.htm)[
itab - Index Access with Key](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenmodify_itab_using_key_abexa.htm)[
itab - Insert Lines](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abeninsert_lines_abexa.htm)[
itab - Key Accesses](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenread_itab_using_key_abexa.htm)[
itab - Loop with Key](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenloop_at_itab_key_abexa.htm)[
itab - Loop with Step Size](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenloop_at_itab_step_abexa.htm)[
itab - Multiple FOR Expressions](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenreduce_for_for_abexa.htm)[
itab - Nested Tables](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennested_internal_tables_abexa.htm)[
itab - Output Area](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenread_table_abexa.htm)[
itab - Random Grouping with LOOP](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenloop_group_by_random_abexa.htm)[
itab - STEP Examples](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenloop_step_examples_abexa.htm)[
itab - Table Comprehensions, Basic Properties](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abentable_cmprhnsns_simple_abexa.htm)[
itab - Table Comprehensions, Join](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abentable_cmprhnsns_join_abexa.htm)[
itab - Table Comprehensions, Local Helper Fields](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abentable_cmprhnsns_locals_abexa.htm)[
itab - Table Comprehensions, Multiple FOR Expressions](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abentable_cmprhnsns_for_for_abexa.htm)[
itab - Table Comprehensions, Multiple Lines](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abentable_cmprhnsns_lines_abexa.htm)[
itab - Table Comprehensions, Use of Step Size](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abentable_cmprhnsns_step_abexa.htm)[
itab - Table Reduction, Method Calls](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenreduce_method_call_abexa.htm)[
itab - Table Reduction, String Processing](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenreduce_text_abexa.htm)[
itab - Table Reduction, Summation of an Array](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenreduce_simple_abexa.htm)[
itab - Table Reductions, Structured Result](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenreduce_structured_abexa.htm)[
itab - Virtual Sort of a Table](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenvirtual_sort_simple_abexa.htm)[
itab - Virtual Sort of Flight Data](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenvirtual_sort_flights_abexa.htm)[
itab - Virtual Sort of Two Tables](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenvirtual_sort_combined_abexa.htm)[
itab - Virtual Sort with Filter Specified](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenvirtual_sort_filter_abexa.htm)[
iXML - Access to Adjacent Subnodes](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenixml_child_nodes_abexa.htm)[
iXML - Access to Attributes](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenixml_attributes_abexa.htm)[
iXML - Access Using Names](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenixml_node_names_abexa.htm)[
iXML - Access Using Node List](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenixml_node_list_abexa.htm)[
iXML - Create Nodes](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenixml_crea_elem_abexa.htm)[
iXML - Create Simple Elements](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenixml_crea_simple_elem_abexa.htm)[
iXML - DOM Representation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenixml_dom_abexa.htm)[
iXML - Downcasts](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenixml_casting_abexa.htm)[
iXML - Iterator Filters](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenixml_filter_iterator_abexa.htm)[
iXML - Iterator for Attributes](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenixml_attributes_iterator_abexa.htm)[
iXML - Iterator for Element List](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenixml_name_list_iterator_abexa.htm)[
iXML - Iterator for Node List](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenixml_node_list_iterator_abexa.htm)[
iXML - Iterator for Nodes](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenixml_node_iterator_abexa.htm)[
iXML - Modify XML Documents](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenixml_modify_dom_abexa.htm)[
iXML - Parse to DOM](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenixml_parsing_abexa.htm)[
iXML - Rendering](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenixml_render_abexa.htm)[
iXML - Sequential Parsing](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenixml_sequential_parsing_abexa.htm)[
iXML - Token Parsers and Renderers, Iterative](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenixml_parse_render_token_abexa.htm)[
iXML - Token Parsers and Renderers, Table](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenixml_parse_render_tk_tab_abexa.htm)
J
[
JSON - asJSON for Additional XML Schema Data Types](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_json_asjson_xsd_abexa.htm)[
JSON - asJSON for Anonymous Data Objects](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_json_asjson_dref_abexa.htm)[
JSON - asJSON for Elementary Object Types](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_json_asjson_elem_abexa.htm)[
JSON - asJSON for Internal Tables](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_json_asjson_table_abexa.htm)[
JSON - asJSON for Object References](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_json_asjson_oref_abexa.htm)[
JSON - asJSON for Structures](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_json_asjson_struc_abexa.htm)[
JSON - asJSON in General](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_hello_json_abexa.htm)[
JSON - Identity Transformation with JSON Writer as Target](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenjson_trafo_id_abexa.htm)[
JSON - Object Components in JSON-XML](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_json_xml_abexa.htm)[
JSON - Parsing](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_json_oo_reader_abexa.htm)[
JSON - Rendering](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_json_token_writer_abexa.htm)[
JSON - Simple Transformation for Internal Tables](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_st_json_table_abexa.htm)[
JSON - Simple Transformation for Name Attributes](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_st_json_table_attr_abexa.htm)[
JSON - Transformation of XML Data](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_xml_to_json_abexa.htm)[
JSON - Transformation to HTML](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_json_to_html_abexa.htm)[
JSON - Transforming Names](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_json_names_to_upper_abexa.htm)
L
[
LDB - Calls Using a Function Module](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenlogical_database_abexa.htm)[
LDB - Linkage with a Program](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenreport_abexa.htm)[
LET Expression](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenlet_abexa.htm)[
Lists - Call from Dynpro Processing](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenleave_to_list_proc_abexa.htm)[
Lists - Dialog Box](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenlist_window_abexa.htm)[
Lists - HIDE Technology](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenlist_hide_abexa.htm)[
Lists - Line Elements](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenlist_line_elements_abexa.htm)[
Lists - Page Header](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenlist_top_of_page_abexa.htm)[
Lists - Page Layout](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenlist_pages_abexa.htm)[
Lists - Possible Colors](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenlist_format_color2_abexa.htm)[
Lists - Spool](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenprint_list_abexa.htm)[
Lists - Using Colors](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenlist_format_color_abexa.htm)[
Lossless Assignment](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenmove_exact_abexa.htm)
M
[
Macros](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenmacro_abexa.htm)[
Meshes - Changing Multiple Lines in Mesh Paths](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenmesh_modify_abexa.htm)[
Meshes - Changing Single Lines in Mesh Paths](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenmesh_modify_table_abexa.htm)[
Meshes - Deleting Multiple Lines in Mesh Paths](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenmesh_delete_abexa.htm)[
Meshes - Deleting Single Lines in Mesh Paths](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenmesh_delete_table_abexa.htm)[
Meshes - FOR Expressions for Mesh Paths](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenmesh_for_abexa.htm)[
Meshes - Forward Associations in Mesh Paths](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenmesh_for_forward_abexa.htm)[
Meshes - Insertions in Mesh Paths](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenmesh_insert_abexa.htm)[
Meshes - Inverse Associations in Mesh Paths](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenmesh_for_inverse_abexa.htm)[
Meshes - Loops Across Mesh Paths](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenmesh_loops_abexa.htm)[
Meshes - Mesh Path Expressions](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenmesh_table_expressions_abexa.htm)[
Meshes - Reflexive Associations in Mesh Paths](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenmesh_for_reflex_sngl_abexa.htm)[
Meshes - Setting Mesh Associations for Mesh Paths](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenmesh_set_association_abexa.htm)[
Meshes - Table Builds Using Mesh Paths](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenmesh_build_abexa.htm)[
Messages - IF\_T100\_DYN\_MSG for Exception error\_message](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenraise_error_message_abexa.htm)[
Messages - IF\_T100\_DYN\_MSG in a Global Exception Class](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenraise_message_global_abexa.htm)[
Messages - IF\_T100\_DYN\_MSG in a Local Exception Class](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenraise_message_abexa.htm)[
Messages - IF\_T100\_DYN\_MSG in a Regular Class](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenif_t100_dyn_msg_abexa.htm)[
Messages - IF\_T100\_MESSAGE for Exception with Message](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenmessage_interface_reuse_abexa.htm)[
Messages - IF\_T100\_MESSAGE in a Global Exception Class](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenmessage_interface_global_abexa.htm)[
Messages - IF\_T100\_MESSAGE in a Local Exception Class](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenmessage_interface_abexa.htm)[
Messages - IF\_T100\_MESSAGE in a Regular Class](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenif_t100_message_abexa.htm)[
Method Chaining](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenmethod_chaining_abexa.htm)[
MODIFY, FROM TABLE](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenbulk_modify_abexa.htm)[
MOVE-CORRESPONDING for Internal Tables](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenmove_corresponding_abexa.htm)[
MOVE-CORRESPONDING for Structures](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenmove_corresponding_struc_abexa.htm)
N
[
num\_func - Extremum Functions nmax, nmin](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abennmax_nmin_function_abexa.htm)[
num\_func - General Numeric Functions](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenmath_func_abexa.htm)[
num\_func - Integer Power Function ipow](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenipow_function_abexa.htm)[
num\_func - Rounding Function round](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenround_function_abexa.htm)
O
[
OPEN CURSOR, Read Data Using Cursor](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenopen_cursor_abexa.htm)[
OS - Persistency Service](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenos_persist_abexa.htm)[
OS - Query Service](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenos_query_abexa.htm)[
OS - Transaction Service](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenos_transaction_abexa.htm)
P
[
Parameter Passing](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenprocedure_param_abexa.htm)[
Path Expressions, Use in the FROM Clause](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenpath_expr_in_from_clause_abexa.htm)[
Path Expressions, Use in the SELECT List](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenpath_expr_in_colspec_abexa.htm)[
Program Calls, Filling the Selection Screen](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensubmit_selscreen_abexa.htm)[
Program Calls, Modifying the Basic List](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensubmit_list_abexa.htm)
R
[
Read Time Stamp from String](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencl_utclong_read_abexa.htm)[
Reduce Operator, Type Inference](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenreduce_type_inference_abexa.htm)[
Reflexive Component Assignments](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenreflexive_corresponding_abexa.htm)[
regex - Parsing with PCRE Regular Expression](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenpcre_parsing_abexa.htm)[
regex - PCRE Regular Expression with Callouts](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenpcre_callout_abexa.htm)[
regex - Search for a Regular Expression](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenregex_abexa.htm)[
regex - XPath Regular Expression](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenxpath_regex_abexa.htm)[
rel\_exp - Comparing Text Strings of Different Length](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenstring_comparison_abexa.htm)[
rel\_exp - Comparison Operators for Character-Like Data Types](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencharacter_comparisons_abexa.htm)[
rel\_exp - Comparison with Selection Table](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenlog_exp_in_abexa.htm)[
rel\_exp - Predicate Expression IS INSTANCE OF](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abeninstance_of_abexa.htm)[
rel\_exp - Predicate Expression IS NOT BOUND](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenbound_abexa.htm)[
rel\_exp - Predicate Function matches](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenpred_function_matches_abexa.htm)[
rel\_exp - Predicative Method Calls](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenpredicative_method_call_abexa.htm)[
RFC - Dynamic Destination](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenrfc_dynamic_dest_abexa.htm)[
RFC - Dynamic Parameter Passing in sRFC](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenrfc_parameter_tables_abexa.htm)[
RFC - Exception Handling](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenrfc_exceptions_abexa.htm)[
RFC - Implicit Logon Data](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenrfc_logon_data_abexa.htm)[
RFC - Parallel aRFC](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenparallel_rfc_abexa.htm)[
RFC - Parameter Passing in sRFC and aRFC](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenrfc_parameters_abexa.htm)[
Runtime Measurement of Database Reads](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenget_run_time_abexa.htm)
S
[
SAP HANA, ABAP-Specific Session Variables](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenhana_session_variables_abexa.htm)[
SAP HANA, Cached Views](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenhana_cached_views_abexa.htm)[
SAP HANA, Call Database Procedure](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencall_hana_db_proc_abexa.htm)[
SAP HANA, Currency Conversion with SQLScript](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensql_script_curr_conv_abexa.htm)[
SAP HANA, Database Procedure Proxy](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencall_db_procedure_abexa.htm)[
SAP HANA, from ADBC to AMDP](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenfrom_adbc_to_amdp_abexa.htm)[
SAP Locks, Set and Release](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenenqueue_abexa.htm)[
SAP LUW, ON COMMIT](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensap_luw_on_commit_abexa.htm)[
SAP LUW, RAP](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenluw_rap_abexa.htm)[
SAP LUW, UPDATE TASK](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensap_luw_update_task_abexa.htm)[
SELECT, Byte Field Indicators](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenselect_ind_bitfield_abexa.htm)[
SELECT, Create Internal Table as Target Area](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenselect_into_new_table_abexa.htm)[
SELECT, Create Structure as Target Area](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenselect_into_new_wa_abexa.htm)[
SELECT, Difference of CDS View Entity with Input Parameters](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenselect_except_cds_para_abexa.htm)[
SELECT, Difference of Multiple Tables](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenselect_except_abexa.htm)[
SELECT, Difference with Aggregate Expression](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenselect_except_min_abexa.htm)[
SELECT, Difference with Global Temporary Table](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenselect_except_min_gtt_abexa.htm)[
SELECT, Dynamic ORDER BY Clause](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendynamic_order_by_abexa.htm)[
SELECT, Dynamic Token Specification](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendynamic_sql_abexa.htm)[
SELECT, GROUP BY for SQL Expressions](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensql_expr_with_group_by_abexa.htm)[
SELECT, Grouping Function](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abengrouping_function_abexa.htm)[
SELECT, Grouping Sets](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenselect_grouping_sets_abexa.htm)[
SELECT, Hierarchy Generator, BULK vs. INCREMENTAL](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenselect_hierarchy_abexa.htm)[
SELECT, Hierarchy Navigator HIERARCHY\_ANCESTORS\_AGGREGATE](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenhier_ancs_agg_abexa.htm)[
SELECT, Hierarchy Navigator HIERARCHY\_DESCENDANTS\_AGGREGATE](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenhier_desc_agg_abexa.htm)[
SELECT, Hierarchy Navigator HIERARCHY\_DESCENDANTS\_AGGREGATE with WITH](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenhier_desc_agg_with_abexa.htm)[
SELECT, Inline Declarations](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenselect_inline_decl_abexa.htm)[
SELECT, Inner, Outer, and Cross Joins](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenjoins_abexa.htm)[
SELECT, Internal Table as a Data Source of the Hierarchy Generator](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenselect_from_itab_hiera_abexa.htm)[
SELECT, Internal Table as Data Source of a Query](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenselect_from_itab_abexa.htm)[
SELECT, Intersection of CDS View Entity with Input Parameters](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenselect_inter_cds_para_abexa.htm)[
SELECT, Intersection of Multiple Tables](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenselect_intersect_abexa.htm)[
SELECT, Intersection with Aggregate Expression](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenselect_intersect_max_abexa.htm)[
SELECT, Intersection with Global Temporary Table](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenselect_intersect_max_gtt_abexa.htm)[
SELECT, Multiple Joins](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenjoin_joins_abexa.htm)[
SELECT, Remove Columns from the SELECT List](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenselect_except_columns_abexa.htm)[
SELECT, Restriction of the Rows in the Result Set](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenselect_up_to_offset_abexa.htm)[
SELECT, SQL Expressions in the WHERE Condition](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensql_expr_in_where_cond_abexa.htm)[
SELECT, Union for Building a Ranges Table](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendemo_union_ranges_abexa.htm)[
SELECT, Union of CDS View Entity with Input Parameters](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenselect_union_cds_para_abexa.htm)[
SELECT, Union of Multiple Tables](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenselect_union_abexa.htm)[
SELECT, Union with Aggregate Expression](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenselect_union_sum_abexa.htm)[
SELECT, Union with Global Temporary Table](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenselect_union_sum_gtt_abexa.htm)[
Selection Screens - As Subscreens](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensel_screen_subscreen_abexa.htm)[
Selection Screens - Basic Form of Selection Criteria](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensel_screen_sel_opt_abexa.htm)[
Selection Screens - Block Processing and Radio Button Processing](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensel_screen_at_sel_on_abexa.htm)[
Selection Screens - Calling Standalone Selection Screens](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensel_screen_call_sel_scr_abexa.htm)[
Selection Screens - Change Standard GUI Status](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensel_screen_gui_status_abexa.htm)[
Selection Screens - Default Values for Selection Criteria](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensel_screen_sel_opt_def_abexa.htm)[
Selection Screens - Display Properties for Parameters](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensel_screen_param_screen_abexa.htm)[
Selection Screens - Dynamic Dictionary Reference](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensel_screen_dyn_dict_abexa.htm)[
Selection Screens - Field Help](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensel_screen_f1_help_abexa.htm)[
Selection Screens - Free Selections](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenfree_selection_abexa.htm)[
Selection Screens - In Tabstrips](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensel_screen_tabstrip_abexa.htm)[
Selection Screens - Input Help for Parameters](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensel_screen_f4_help_abexa.htm)[
Selection Screens - Pushbuttons](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensel_screen_button_abexa.htm)[
Selection Screens - Value Properties of Parameters](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensel_screen_param_value_abexa.htm)[
Selection Screens -Pushbuttons in the Toolbar](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenselscreen_pb_bar_abexa.htm)[
Selection Screens -Subscreens](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensel_screen_with_subscr_abexa.htm)[
Selection Screens -Tabstrips](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensel_screen_with_tabstrip_abexa.htm)[
Serialization to Heap or Embedded](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenserialize_ref_heap_embed_abexa.htm)[
Serializing Data References](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenserialize_dref_abexa.htm)[
Setting the Text Environment](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenset_locale_abexa.htm)[
Shared Objects - Example](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenshared_objects_abexa.htm)[
Shared Objects - Writing to and Reading from an Area](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenshared_objects2_abexa.htm)[
Sorting Internal Tables](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensort_stable_abexa.htm)[
Sorting Internal Tables Alphabetically](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensort_text_abexa.htm)[
Sorting Internal Tables Dynamically](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensort_itab_exp_abexa.htm)[
Sorting Internal Tables with Secondary Keys](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensort_itab_sec_key_abexa.htm)[
sql\_agg - Aggregate Function ALLOW\_PRECISION\_LOSS](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensql_expr_aggr_prec_loss_abexa.htm)[
sql\_agg - Aggregate Function string\_agg](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensql_expr_string_agg_abexa.htm)[
sql\_agg - Use in Aggregate Expressions](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensql_expr_in_aggregates_abexa.htm)[
sql\_cond - Subquery in WHERE Condition](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenselect_subquery_abexa.htm)[
sql\_exp - Aggregate Expressions in SQL Expressions](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensql_expr_aggr_in_expr_abexa.htm)[
sql\_exp - Arithmetic Calculations](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensql_expr_arith_abexa.htm)[
sql\_exp - Cast Expression](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensql_expr_cast_abexa.htm)[
sql\_exp - Complex CASE](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensql_expr_searched_case_abexa.htm)[
sql\_exp - Concatenations](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensql_expr_string_abexa.htm)[
sql\_exp - Constant in SELECT List](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensql_expr_literal_abexa.htm)[
sql\_exp - Null Expression](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensql_expr_null_abexa.htm)[
sql\_exp - Simple CASE](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensql_expr_case_string_abexa.htm)[
sql\_func - Coalesce Function](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensql_expr_coalesce_abexa.htm)[
sql\_func - String Functions](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensql_string_func_abexa.htm)[
sql\_win - Window Expressions](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensql_expr_over_abexa.htm)[
sql\_win - Window Expressions with Grouping](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensql_expr_over_group_abexa.htm)[
sql\_win - Window Expressions with Sort](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensql_expr_over_order_by_abexa.htm)[
sql\_win - Window Expressions without Partition](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensql_expr_over_all_abexa.htm)[
sql\_win - Window Frame Specification](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensql_expr_over_win_frame_abexa.htm)[
sql\_win - Window Function NTILE](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensql_expr_over_ntile_abexa.htm)[
sql\_win - Window Functions LEAD and LAG](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensql_expr_over_lead_lag_abexa.htm)[
ST - Example of an ST Program](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenst_program_abexa.htm)[
ST - Formatting Options](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenst_format_option_abexa.htm)[
ST - Internal Tables](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenst_table_abexa.htm)[
ST - Mapping of XML Fragments](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenst_xsdany_abexa.htm)[
ST - Method Call](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenmethod_call_from_st_abexa.htm)[
ST - Option for Decimal Places](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenst_decimals_option_abexa.htm)[
ST - Option for Invalid Values](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenst_noerror_option_abexa.htm)[
ST - Option for Regime](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenst_regime_option_abexa.htm)[
ST - Structures](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenst_structure_abexa.htm)[
ST - tt:value](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenst_value_abexa.htm)[
string\_exp - Concatenating Strings](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenstring_concatenation_abexa.htm)[
string\_func - cmax, cmin, and segment](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencmax_cmin_function_abexa.htm)[
string\_func - count, find, and match](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenstring_function_find_abexa.htm)[
string\_func - distance](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenstring_function_distance_abexa.htm)[
string\_func - escape for HTML](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenstring_function_escape_abexa.htm)[
string\_func - escape for XSS](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenstring_function_esc_xss_abexa.htm)[
string\_func - shift and substring](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenstring_function_shift_abexa.htm)[
string\_func - to\_mixed and from\_mixed](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenstring_function_mixed_abexa.htm)[
string\_tmpl - Alignments and Padding](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenstring_template_align_abexa.htm)[
string\_tmpl - asXML Format](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenstring_template_xsd_abexa.htm)[
string\_tmpl - Case](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenstring_template_case_abexa.htm)[
string\_tmpl - Control Characters](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenstring_template_ctrlchar_abexa.htm)[
string\_tmpl - Date Formats](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenstring_template_date_abexa.htm)[
string\_tmpl - Formatting Settings](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenstring_template_user_abexa.htm)[
string\_tmpl - Number Formats](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenstring_template_number_abexa.htm)[
string\_tmpl - Sign](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenstring_template_sign_abexa.htm)[
string\_tmpl - Specified Length](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenstring_template_width_abexa.htm)[
string\_tmpl - Strings of Digits](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenstring_template_alpha_abexa.htm)[
string\_tmpl - Time Formats](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenstring_template_time_abexa.htm)[
string\_tmpl - Time Stamp Formats](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenstring_template_utc_abexa.htm)[
string\_tmpl - Time Zones](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenstring_template_timezone_abexa.htm)[
Structure from ABAP Dictionary](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendictionary_structure_abexa.htm)[
Substrings](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendata_process_fields_abexa.htm)[
sXML - Formats](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensxml_formats_abexa.htm)[
sXML - Methods for Token-Based Parsing.](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensxml_parsing_methods_abexa.htm)[
sXML - Modifying XML Data](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensxml_reader_writer_abexa.htm)[
sXML - Namespace Declarations in Token-Based Rendering](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensxml_renderering_ns_abexa.htm)[
sXML - Object-Oriented Parsing](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensxml_oo_parsing_abexa.htm)[
sXML - Object-Oriented Rendering](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensxml_oo_rendering_abexa.htm)[
sXML - Steps in Token-Based Parsing](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensxml_parsing_steps_abexa.htm)[
sXML - Token-Based Parsing](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensxml_parsing_abexa.htm)[
sXML - Token-Based Rendering](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensxml_rendering_abexa.htm)[
sXML - Transformation from XML Reader](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensxml_trafo_from_reader_abexa.htm)[
sXML - Transformation of Formats](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensxml_format_trafos_abexa.htm)[
sXML - Transformation to XML Writer](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensxml_trafo_into_writer_abexa.htm)
T
[
table\_exp - Chainings](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abentable_exp_chaining_abexa.htm)[
table\_exp - Default Value](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abentable_exp_default_abexa.htm)[
table\_exp - Line Specification](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abentable_exp_itab_line_abexa.htm)[
table\_exp - Side Effects](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abentable_exp_side_effect_abexa.htm)[
table\_exp - Write Positions](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abentable_exp_itab_changing_abexa.htm)[
table\_func - Index Function](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenline_index_abexa.htm)[
Transaction Call, BDC Table](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencall_transaction_bdc_abexa.htm)[
Transaction Call, Dialog Transaction](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencall_transaction_dialog_abexa.htm)[
Transaction Call, Report Transaction](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencall_transaction_repo_abexa.htm)[
Transaction Call, SPA/GPA Parameters](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencall_transaction_abexa.htm)[
Transformation of XML Element Names](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencall_trafo_upper_lower_abexa.htm)[
Transformation of XML Syntax Characters](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencall_trafo_escaping_abexa.htm)
U
[
UPDATE, SET INDICATORS](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenupdate_set_indicators_abexa.htm)[
UPDATE, Use of SET](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenupdate_set_abexa.htm)[
UPDATE, USING CLIENT, CLIENTS](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenupdate_client_clients_abexa.htm)[
User Dialogs](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenscreen_abexa.htm)[
Using %cid / %cid\_ref](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenderived_types_cid_cidref_abexa.htm)[
Using %control](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenderived_types_control_abexa.htm)[
Using %data / %target](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenderived_types_data_abexa.htm)[
Using %fail](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenderived_types_fail_abexa.htm)[
Using %is\_draft](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenderived_types_isdraft_abexa.htm)[
Using %key](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenderived_types_key_abexa.htm)[
Using %pid](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenderived_types_pid_abexa.htm)[
Using %pre / %tmp / %pky](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenderived_types_pre_tmp_abexa.htm)[
Using %tky](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenderived_types_tky_abexa.htm)[
Using the Addition PRIVILEGED with an ABAP EML Statement](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abeneml_privileged_abexa.htm)[
Using TYPE TABLE/TYPE STRUCTURE FOR HIERARCHY](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenderived_type_hierarchy_abexa.htm)
V
[
Value Operator, Type Inference](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenvalue_type_inference_abexa.htm)[
Value Ranges of Packed Numbers](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abentype_p_value_range_abexa.htm)[
VALUE, Addition BASE for Internal Tables](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenvalue_itab_base_abexa.htm)[
VALUE, Operator for Internal Tables](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenvalue_itab_abexa.htm)[
VALUE, Operator with LET for Internal Tables](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenvalue_itab_let_abexa.htm)[
Variants of MOVE-CORRESPONDING and the CORRESPONDING Operator Using Deep Structures](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencorresponding_variants_s_abexa.htm)
W
[
WITH, Aggregation for Join Set](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenwith_agg_union_abexa.htm)[
WITH, Client Handling](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenwith_client_handling_abexa.htm)[
WITH, Common Table Expressions](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenwith_cte_abexa.htm)[
WITH, Exposing Associations](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenwith_associations_abexa.htm)[
WITH, Exposing Associations with a Recursive Redirect](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenwith_assocs_redir_self_abexa.htm)[
WITH, Exposing Associations with a Redirect](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenwith_assocs_redirect_abexa.htm)[
WRITE TO, Truncation Behavior](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenwrite_truncation_abexa.htm)
X
[
XML Sources of Transformations](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencall_trafo_sources_abexa.htm)[
XML Targets of Transformations](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencall_trafo_results_abexa.htm)[
XSL - Identity Transformation to asXML Format](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenxslt_abexa.htm)